partial implementation of test collection from jenkins